projects/forgejo/manifests/middleware.yml
# Enable auto-detection
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: contenttype
  namespace: forgejo
spec:
  contentType: {}
